CSS fix : Les ingrédients seront alignés horizontalement et indépendamment des options -

--- a/css/index.css
+++ b/css/index.css
@@ -79,15 +79,15 @@ button:hover {
 }
 
 /* INPUTS */
-input[type=text], input[type=email] {
+input[type=text], input[type=email], .custom-ingredient {
     /* width: 180px; */
-    max-width: 100%;
+    /* max-width: 100%;
     color: #eeeeee;
     padding: 12px 20px;
     display: inline-block;
     border-radius: 10px;
     box-sizing: border-box;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease; */
 }
 
 input[type=text], input[type=number], input[type=password], input[type=email], textarea, select, button {
@@ -122,7 +122,7 @@ textarea {
     /* width: 50%; */
 }
 
-select {
+select, .custom-ingredient {
     border: 2px solid #ccc;
     color: #ffffff;
     background-color: #000;
@@ -148,7 +148,7 @@ input[type=password], select, input[type=number] {
 }
 
 input:focus,
-textarea:focus, input:hover, textarea:hover {
+textarea:focus, input:hover, textarea:hover, .custom-ingredient:hover {
     border: 1px solid var(--input-focus);
     background-color: var(--input-background-color);
     /* transition: all 0.2s ease; */
@@ -779,9 +779,34 @@ form {
         width: 100%;
     }
 }
+.ingredient-stack {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 100%;
+    width: 100%;
+    gap: 5px;
+    min-height: fit-content;
+}
 
 hr {
     border-bottom: 1px solid;
     width: 50%;
     margin: 30px auto;
+}
+
+.custom-ingredient {
+    display: inline-flex;
+    text-align: center;
+    cursor: pointer;
+    width: fit-content;
+    /* margin: 10px; */
+    border: 1px solid var(--border-color);
+    /* padding: 10px;
+    max-width: 100%; */
+    border-radius: 10px;
+    /* color: #eeeeee;
+    transition: all 0.3s ease;
+    @media screen and (max-width: 576px) {
+        margin: 10px auto;
+    } */
 }
